<resources>
    <string name="app_name">Workers</string>
    <string name="servico_prestado">Serviço prestado</string>
    <string name="descricao_do_servico">Descrição do serviço</string>
    <string name="telefone">Telefone</string>
    <string name="local">local</string>
    <string name="tipo_de_anuncio">Tipo de anuncio</string>
    <string name="anunciar">Anunciar</string>
    <string name="usuario">usuario</string>
    <string name="slogan">Anúncie fácil e rápido</string>
    <string name="todo">TODO</string>

    <string-array name="tipos">
        <item>Automóveis</item>
        <item>Arte</item>
        <item>Beleza</item>
        <item>Construção</item>
        <item>Comida</item>
        <item>Domésticos</item>
        <item>Depilação</item>
        <item>Educação Física</item>
        <item>Elétrica</item>
        <item>Eletrônica</item>
        <item>Entregas</item>
        <item>Estudos</item>
        <item>Festas</item>
        <item>Fretes</item>
        <item>Garçon</item>
        <item>Informática</item>
        <item>Jardinagem</item>
        <item>Motos</item>
        <item>Massagem</item>
        <item>Música</item>
        <item>Pintura</item>
        <item>Saúde</item>
        <item>Sexo</item>
        <item>Viagens</item>
        <item>Outros</item>
    </string-array>
</resources>
