<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <EditText
        android:id="@+id/servico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:hint="@string/servico_prestado"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/servico"
        android:layout_margin="8dp"
        android:hint="@string/descricao_do_servico"
        android:inputType="textMultiLine"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/descricao"
        android:layout_margin="8dp"
        android:hint="@string/telefone"
        android:inputType="phone"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/local"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/telefone"
        android:layout_margin="8dp"
        android:hint="@string/local"
        android:inputType="textMultiLine"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_tipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/local"
        android:layout_margin="8dp"
        android:text="@string/tipo_de_anuncio"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_tipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_tipo"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/salvar_anuncio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/servico"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buton_circle"
        android:text="@string/anunciar"
        android:textStyle="bold"
        android:textColor="#fff" />
</RelativeLayout>